--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,13 @@
     <script src="https://kit.fontawesome.com/bc9e1eafc4.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="socket.io/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/filesize/8.0.7/filesize.min.js"></script>
+    <script src="./scripts/moment.js"></script>
+    <script src="./scripts/moment-with-locales.js"></script>
+    <script>
+      console.log(moment().calendar());
+    </script>
+    <script src="file-previsualization.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,6 +20,7 @@
   <body>
     <div id="container">
       <h1 id="title">MiChat</h1>
+      
       <div id="chatSection">
         <div class="chat-window">
           <div>
@@ -49,7 +57,7 @@
             </div> file-prev element definition--> 
           </div>
           <form class="chat-form" action="http://localhost:3000/uploads/" method="post" enctype="multipart/form-data">
-            <input placeholder="..." type="text" class="chat-input" />
+            <input placeholder="..." name ="text" type="text" class="chat-input" />
               <button type="submit" class="chat-submit">
                 <i id="send-icon" class="icon fa-regular fa-paper-plane"></i>
               </button>
