--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,18 @@
   <body>
     <div id="container">
       <h1 id="title">MiChat</h1>
-      
+
+      <div id="channels-section">
+        <div class="text-channels">
+          <div class="title">
+            <h2>Text Channels</h2>
+            <span class="icon">+</span>
+          </div>
+        </div>
+      </div>
+
       <div id="chatSection">
+
         <div class="chat-window">
           <div>
             <div class="user-message">
